enum-ptr-test/tests/fail/borrow_mut.stderr
error[E0277]: the trait bound `Unit: FieldDerefMut` is not satisfied
 --> tests/fail/borrow_mut.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^ the trait `FieldDerefMut` is not implemented for `Unit`
  |
  = help: the following other types implement trait `FieldDerefMut`:
            &mut T
            Box<T>
            Option<&mut T>
            Option<Box<T>>
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
